ajuste no metodo de requisição

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
   --bg-color2: #27262b;
   --details: #2b2a2f;
   --gray-color: #e4e4e4;
-  --detailsColor: #ff8c28; 
+  --detailsColor: #5aff28; 
   --detailsColorHover: #ff7802; 
   --textColor: #e6e6e6;
   /* --buttonColor: rebeccapurple; */
